# diplom

./: index.html  package.json
src/: games.json  main.tsx  providers.tsx  router.tsx  styles.css  test.json  users.json
src-tauri/: Cargo.toml  build.rs  diplom-rs.exe.xml  tauri.conf.json
src-tauri/games/: games.json
src-tauri/resources/: test.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/tests/: tests.json
src-tauri/users/: users.json
src/components/: err.component.tsx  header.component.tsx  testbutton.component.tsx
src/features/: excel.ts  games.ts  users.ts
src/pages/: game-creation.tsx  games-variant.tsx  games.tsx  main.tsx  results.tsx  students.tsx
src/pages/test/: enterTest.tsx  test.tsx
